--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>react-decision</title>
+	<title>Indecision App</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css"> -->
-	<!-- <script src="main.js"></script> -->
 </head>
 <body>
 	<div id="app"></div>
-
-	<script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
-	<script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
-	<script src="/scripts/app.js"></script>
+	<script src="/bundle.js"></script>
 </body>
 </html>
